--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_CONNECT = mongodb+srv://VED:g2pS5VgEJvkMZzcF@cluster0.s6iye.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_CONNECT = mongodb+srv://VED:F@cluster0.s6iye.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
 password:- g2pS5VgEJvkMZzcF
 
