securing .env file

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_CONNECT = mongodb+srv://VED:F@cluster0.s6iye.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
-password:- g2pS5VgEJvkMZzcF
+password:- g2pS
 
-TOKEN_SECRET=fjsdfjsfkdfititnv
+TOKEN_SECRET=fjsdfjsf
